RESOLVED FIXED253503
REGRESSION: Top bar is jumpy and glitchy on scmp.com
https://bugs.webkit.org/show_bug.cgi?id=253503
Summary REGRESSION: Top bar is jumpy and glitchy on scmp.com
Kdwk
Reported 2023-03-07 03:42:11 PST
Created attachment 465337 [details] Screencast showing top bar of scmp.com while site is scrolled On scmp.com, the top bar of the site is jumpy and glitchy when the website is scrolled. Reproducible on any WebKitGTK.
Attachments
Screencast showing top bar of scmp.com while site is scrolled (25.99 MB, video/webm)
2023-03-07 03:42 PST, Kdwk
no flags
Carlos Garcia Campos
Comment 1 2023-03-07 05:38:46 PST
I can reproduce with 2.38 too, but it's maybe a bit less noticeable.
Zan Dobersek
Comment 2 2023-03-07 09:19:06 PST
Also reproducible on WPE, and on Mac, in Safari Technology Preview 164 and on trunk. Not reproduced in stable Safari 16.1.
Simon Fraser (smfr)
Comment 3 2023-03-07 15:24:14 PST
position:fixed inside overflow scroll. Importantly, it's jittery even when JavaScript is disabled, which means it's a scrolling tree bug.
Carlos Garcia Campos
Comment 4 2023-03-07 22:40:07 PST
This didn't regress in 2.39.90 and it's cross-platform issue.
Radar WebKit Bug Importer
Comment 5 2023-03-07 22:40:47 PST
Simon Fraser (smfr)
Comment 6 2023-03-24 12:24:50 PDT
The page has a “position:fixed” element inside overflow:scroll, but with a transformed ancestor, so the “position:fixed” behaves more like “position:absolute”. But for some reason we don’t reposition it on the scrolling thread correctly.
Simon Fraser (smfr)
Comment 7 2023-03-24 12:24:56 PDT
I think we need to educate the scrolling tree about fixed elements that don’t behave like fixed (because of an ancestor transform), but whose containing block is still the viewport.
Simon Fraser (smfr)
Comment 8 2023-03-24 16:09:08 PDT
Reverting 247609@main fixes this.
Simon Fraser (smfr)
Comment 9 2023-03-24 16:42:31 PDT
EWS
Comment 10 2023-03-25 15:55:31 PDT
Committed 262118@main (cf604717c41c): <https://commits.webkit.org/262118@main> Reviewed commits have been landed. Closing PR #11955 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.